--- a/index.html
+++ b/index.html
@@ -14,6 +14,19 @@
 </head>
 
 <body>
+    <!-- page preloader -->
+    <div class="preloader">
+        <div class="top">
+            <span class="preloader-title">Zeynalabdeen</span>
+        </div>
+        <span class="loader-line"></span>
+        <div class="bottom">
+            <span class="preloader-title">Loading...</span>
+        </div>
+    </div>
+    <!-- page preloader -->
+
+
 
     <nav>
         navi
@@ -86,40 +99,7 @@
 
     <script src="./assets/bootstrap/js/bootstrap.bundle.js"></script>
     <script src="./assets/swiperjs/swiper-bundle.min.js"></script>
-
-    <script>
-        var swiper = new Swiper(".mySwiper", {
-            loop: true,
-            spaceBetween: 8,
-            slidesPerView: 3,
-            centeredSlides: true,
-            autoplay: true,
-            speed: 2500,
-            freeMode: true,
-            watchSlidesProgress: true,
-            direction: "vertical",
-        });
-        var swiper2 = new Swiper(".mySwiper2", {
-            loop: false,
-            speed: 2500,
-            autoplay: true,
-            spaceBetween: 30,
-            navigation: {
-                nextEl: ".swiper-next-btn",
-                prevEl: ".swiper-prev-btn",
-            },
-            thumbs: {
-                swiper: swiper,
-            },
-        });
-        var sliderNumber = document.querySelector(".slider-number");
-        sliderNumber.innerHTML = "0" + (swiper2.activeIndex + 1)
-        swiper2.on('slideChange', function (e) {
-            sliderNumber.innerHTML = "0" + (swiper2.activeIndex + 1)
-            console.log(swiper2.activeIndex)
-        });
-
-    </script>
+    <script src="./assets/js/app.js"></script>
 </body>
 
 </html>
