--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="./assets/swiperjs/swiper-bundle.min.css">
     <link rel="stylesheet" href="./assets/css/themify-icons.css">
     <link rel="stylesheet" href="./assets/css/custom.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -29,7 +30,71 @@
 
 
     <nav>
-        navi
+        <div class="nav-wrapper px-3 px-md-5">
+            <div class="logo text-white-50 font18 text-uppercase fw-700">Zeynalabdeen</div>
+            <div class="menu-toggle">
+                <div class="menu-icon me-2">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
+                <span>Menu</span>
+            </div>
+
+            <div class="menu-content px-0 px-md-5">
+                <div class="row">
+                    <div class="col-md-7 pe-5 pe-md-0 d-flex align-items-md-start align-items-center flex-column justify-content-center text-center text-md-start">
+                        <ul class="p-0">
+                            <li class="text-white font35 my-1">
+                                <a>
+                                    <span class="font14 d-none d-md-inline-flex">01.</span>Home
+                                </a>
+                            </li>
+                            <li class="text-white font35 my-1">
+                                <a>
+                                    <span class="font14 d-none d-md-inline-flex">02.</span>About
+                                </a>
+                            </li>
+                            <li class="text-white font35 my-1">
+                                <a>
+                                    <span class="font14 d-none d-md-inline-flex">03.</span>Portfolio
+                                </a>
+                            </li>
+                            <li class="text-white font35 my-1">
+                                <a>
+                                    <span class="font14 d-none d-md-inline-flex">04.</span>Works
+                                </a>
+                            </li>
+                            <li class="text-white font35 my-1">
+                                <a>
+                                    <span class="font14 d-none d-md-inline-flex">05.</span>Blog
+                                </a>
+                            </li>
+                            <li class="text-white font35 my-1">
+                                <a>
+                                    <span class="font14 d-none d-md-inline-flex">06.</span>Contact
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-md-5 border-start pe-5 pe-md-0 ps-0 ps-md-5 d-flex align-items-md-start align-items-center flex-column justify-content-center">
+                        <div class="row my-3 text-white d-inline text-center text-md-start">
+                            <h2 class="fw-600 mb-3 font22 text-purple">Adres</h2>
+                            <span class="font16">Bakı, Azərbaycan</span>
+                        </div>
+                        <div class="row my-3 text-white d-inline text-center text-md-start">
+                            <h2 class="fw-600 mb-3 font22 text-purple">Əlaqə</h2>
+                            <span class="font16">zeeynalabden@gmail.com</span>
+                        </div>
+                        <div class="row my-3 text-white d-inline text-center text-md-start flex-column d-flex">
+                            <h2 class="fw-600 mb-3 font22 text-purple">Sosyal Medyalar</h2>
+                            <span class="font16 mb-2"><a href="https://www.facebook.com/zeynal.qedirov.1/" class="text-decoration-none text-white" target="_blank"><i class="fa-brands fa-facebook font20"></i>Facebook</a></span>
+                            <span class="font16 mb-2"><a href="https://www.linkedin.com/in/zeyoni/" class="text-decoration-none text-white" target="_blank"><i class="fa-brands fa-linkedin font20"></i>Linkedin</a></span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </nav>
 
     <div class="main-wrapper">
