--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
                 <span>Menu</span>
             </div>
 
-            <div class="menu-content px-0 px-md-5">
+            <div class="menu-content px-3 px-md-5">
                 <div class="row">
-                    <div class="col-md-7 pe-5 pe-md-0 d-flex align-items-md-start align-items-center flex-column justify-content-center text-center text-md-start">
+                    <div class="col-md-7">
                         <ul class="p-0">
                             <li class="text-white font35 my-1">
                                 <a>
@@ -77,16 +77,16 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="col-md-5 border-start pe-5 pe-md-0 ps-0 ps-md-5 d-flex align-items-md-start align-items-center flex-column justify-content-center">
-                        <div class="row my-3 text-white d-inline text-center text-md-start">
+                    <div class="col-md-5 border-start ps-3 ps-md-5 ">
+                        <div class="row my-3 text-white">
                             <h2 class="fw-600 mb-3 font22 text-purple">Adres</h2>
                             <span class="font16">Bakı, Azərbaycan</span>
                         </div>
-                        <div class="row my-3 text-white d-inline text-center text-md-start">
+                        <div class="row my-3 text-white">
                             <h2 class="fw-600 mb-3 font22 text-purple">Əlaqə</h2>
                             <span class="font16">zeeynalabden@gmail.com</span>
                         </div>
-                        <div class="row my-3 text-white d-inline text-center text-md-start flex-column d-flex">
+                        <div class="row my-3 text-white">
                             <h2 class="fw-600 mb-3 font22 text-purple">Sosyal Medyalar</h2>
                             <span class="font16 mb-2"><a href="https://www.facebook.com/zeynal.qedirov.1/" class="text-decoration-none text-white" target="_blank"><i class="fa-brands fa-facebook font20"></i>Facebook</a></span>
                             <span class="font16 mb-2"><a href="https://www.linkedin.com/in/zeyoni/" class="text-decoration-none text-white" target="_blank"><i class="fa-brands fa-linkedin font20"></i>Linkedin</a></span>
