--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                         </div>
                         <div class="row my-3 text-white">
                             <h2 class="fw-600 mb-3 font22 text-purple">Əlaqə</h2>
-                            <span class="font16">zeeynalabden@gmail.com</span>
+                            <span class="font16">zeeynalabdin@gmail.com</span>
                         </div>
                         <div class="row my-3 text-white">
                             <h2 class="fw-600 mb-3 font22 text-purple">Sosyal Medyalar</h2>
