--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
         <span class="loader-line"></span>
         <div class="bottom">
-            <span class="preloader-title">Loading...</span>
+            <span class="preloader-title">Yüklənir...</span>
         </div>
     </div>
     <!-- page preloader -->
@@ -44,7 +44,7 @@
             <div class="menu-content px-3 px-md-5">
                 <div class="row">
                     <div class="col-md-7">
-                        <ul class="p-0">
+                        <ul class="p-0 d-inline-flex">
                             <li class="text-white font35 my-1">
                                 <a>
                                     <span class="font14 d-none d-md-inline-flex">01.</span>Home
