--- a/index.html
+++ b/index.html
@@ -11,27 +11,29 @@
     <link rel="stylesheet" href="./assets/swiperjs/swiper-bundle.min.css">
     <link rel="stylesheet" href="./assets/css/themify-icons.css">
     <link rel="stylesheet" href="./assets/css/custom.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+        integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
     <!-- page preloader -->
-    <div class="preloader">
-        <div class="top">
-            <span class="preloader-title">Zeynalabdeen</span>
+    <!-- <div class="preloader">
+        <div class="top bg-current">
+            <span class="preloader-title text-current">Zeynalabdeen</span>
         </div>
         <span class="loader-line"></span>
-        <div class="bottom">
-            <span class="preloader-title">Yüklənir...</span>
+        <div class="bottom bg-current">
+            <span class="preloader-title text-current">Yüklənir...</span>
         </div>
-    </div>
+    </div> -->
     <!-- page preloader -->
 
 
 
     <nav>
         <div class="nav-wrapper px-3 px-md-5">
-            <div class="logo text-white-50 font18 text-uppercase fw-700">Zeynalabdeen</div>
+            <div class="logo text-current-50 font18 text-uppercase fw-700">Zeynalabdeen</div>
             <div class="menu-toggle">
                 <div class="menu-icon me-2">
                     <span></span>
@@ -41,55 +43,64 @@
                 <span>Menu</span>
             </div>
 
-            <div class="menu-content px-3 px-md-5">
-                <div class="row">
-                    <div class="col-md-7">
-                        <ul class="p-0 d-inline-flex">
-                            <li class="text-white font35 my-1">
-                                <a>
-                                    <span class="font14 d-none d-md-inline-flex">01.</span>Home
-                                </a>
-                            </li>
-                            <li class="text-white font35 my-1">
-                                <a>
-                                    <span class="font14 d-none d-md-inline-flex">02.</span>About
-                                </a>
-                            </li>
-                            <li class="text-white font35 my-1">
-                                <a>
-                                    <span class="font14 d-none d-md-inline-flex">03.</span>Portfolio
-                                </a>
-                            </li>
-                            <li class="text-white font35 my-1">
-                                <a>
-                                    <span class="font14 d-none d-md-inline-flex">04.</span>Works
-                                </a>
-                            </li>
-                            <li class="text-white font35 my-1">
-                                <a>
-                                    <span class="font14 d-none d-md-inline-flex">05.</span>Blog
-                                </a>
-                            </li>
-                            <li class="text-white font35 my-1">
-                                <a>
-                                    <span class="font14 d-none d-md-inline-flex">06.</span>Contact
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="col-md-5 border-start ps-3 ps-md-5 ">
-                        <div class="row my-3 text-white">
-                            <h2 class="fw-600 mb-3 font22 text-purple">Adres</h2>
-                            <span class="font16">Bakı, Azərbaycan</span>
+            <div class="menu-content bg-current px-3 px-md-5">
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col-md-7">
+                            <ul class="p-0 d-inline-flex">
+                                <li class="text-current font35 my-1">
+                                    <a>
+                                        <span class="font14 d-none d-md-inline-flex">01.</span>Home
+                                    </a>
+                                </li>
+                                <li class="text-current font35 my-1">
+                                    <a>
+                                        <span class="font14 d-none d-md-inline-flex">02.</span>About
+                                    </a>
+                                </li>
+                                <li class="text-current font35 my-1">
+                                    <a>
+                                        <span class="font14 d-none d-md-inline-flex">03.</span>Portfolio
+                                    </a>
+                                </li>
+                                <li class="text-current font35 my-1">
+                                    <a>
+                                        <span class="font14 d-none d-md-inline-flex">04.</span>Works
+                                    </a>
+                                </li>
+                                <li class="text-current font35 my-1">
+                                    <a>
+                                        <span class="font14 d-none d-md-inline-flex">05.</span>Blog
+                                    </a>
+                                </li>
+                                <li class="text-current font35 my-1">
+                                    <a>
+                                        <span class="font14 d-none d-md-inline-flex">06.</span>Contact
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
-                        <div class="row my-3 text-white">
-                            <h2 class="fw-600 mb-3 font22 text-purple">Əlaqə</h2>
-                            <span class="font16">zeeynalabdin@gmail.com</span>
-                        </div>
-                        <div class="row my-3 text-white">
-                            <h2 class="fw-600 mb-3 font22 text-purple">Sosyal Medyalar</h2>
-                            <span class="font16 mb-2"><a href="https://www.facebook.com/zeynal.qedirov.1/" class="text-decoration-none text-white" target="_blank"><i class="fa-brands fa-facebook font20"></i>Facebook</a></span>
-                            <span class="font16 mb-2"><a href="https://www.linkedin.com/in/zeyoni/" class="text-decoration-none text-white" target="_blank"><i class="fa-brands fa-linkedin font20"></i>Linkedin</a></span>
+
+                        <div class="col-md-5 border-start ps-3 ps-md-5 d-flex flex-column justify-content-center ">
+                            <div class="container-fluid ps-0">
+                                <div class="row my-3 text-current">
+                                    <h2 class="fw-600 mb-3 font22 text-purple">Adres</h2>
+                                    <span class="font16">Bakı, Azərbaycan</span>
+                                </div>
+                                <div class="row my-3 text-current">
+                                    <h2 class="fw-600 mb-3 font22 text-purple">Əlaqə</h2>
+                                    <span class="font16">zeeynalabdin@gmail.com</span>
+                                </div>
+                                <div class="row my-3 text-current">
+                                    <h2 class="fw-600 mb-3 font22 text-purple">Sosyal Medyalar</h2>
+                                    <span class="font16 mb-2"><a href="https://www.facebook.com/zeynal.qedirov.1/"
+                                            class="text-decoration-none text-current" target="_blank"><i
+                                                class="fa-brands fa-facebook font20"></i>Facebook</a></span>
+                                    <span class="font16 mb-2"><a href="https://www.linkedin.com/in/zeyoni/"
+                                            class="text-decoration-none text-current" target="_blank"><i
+                                                class="fa-brands fa-linkedin font20"></i>Linkedin</a></span>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -101,7 +112,7 @@
         <section id="home">
             <div class="slide-titles d-flex flex-column">
                 <span class="head-title font60 fw-700">Front End Developer</span>
-                <span class="description-title mt-2 current-text fw-600 ls-1">
+                <span class="description-title text-current-50 mt-2 current-text fw-600 ls-1">
                     Sometimes, we need to check the time, wondering when our work or meeting will finish, without
                     getting caught by others.
                 </span>
@@ -147,6 +158,37 @@
                     </div>
                     <div class="swiper-slide">
                         <img src="./assets/img/slide5.jpg" />
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+        <section id="about" class="bg-current py-4 px-2 px-md-5">
+            <div class="container-fluid">
+                <div class="row py-5">
+                    <div class="col-md-5 d-flex flex-column justify-content-center">
+                        <h2 class="mb-4 fw-700 font30 text-current">Hi, i'm Zeynalabdin!</h2>
+                        <p class="fw-600 font16 text-current-50 lh-1">
+                            Founded in 2000, Dsn Grid has become one of the best Digital Agency in Themeforest.
+                            Blue money going forward, but deploy to production. First-order optimal strategies 
+                            build on a culture of contribution and inclusion so those options
+                        </p>
+                        <h5 class="fw-700 text-uppercase text-current font18 mt-4">Qədirov Zeynalabdin</h5>
+                        <span class="text-current-50 font16">Front-End Developer</span>
+                        <span class="d-flex flex-row align-items-center">
+                            <span class="text-current fw-700 font130 me-4">2</span>
+                            <span class="text-current fw-600 font20 text-uppercase w200">illik front-end təcrübəsi</span>
+                        </span>
+                    </div>
+                    <div class="col-md-7 d-flex flex-column justify-content-center ">
+                        <div class="container-fluid">
+                            <div class="row">
+                                <div class="image-box">
+                                    <img src="./assets/img/about.jpg" class="w-100 h-100" alt="">
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
