--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
     <!-- page preloader -->
-    <!-- <div class="preloader">
+    <div class="preloader">
         <div class="top bg-current">
             <span class="preloader-title text-current">Zeynalabdeen</span>
         </div>
@@ -26,7 +26,7 @@
         <div class="bottom bg-current">
             <span class="preloader-title text-current">Yüklənir...</span>
         </div>
-    </div> -->
+    </div>
     <!-- page preloader -->
 
 
@@ -171,14 +171,15 @@
                         <h2 class="mb-4 fw-700 font30 text-current">Hi, i'm Zeynalabdin!</h2>
                         <p class="fw-600 font16 text-current-50 lh-1">
                             Founded in 2000, Dsn Grid has become one of the best Digital Agency in Themeforest.
-                            Blue money going forward, but deploy to production. First-order optimal strategies 
+                            Blue money going forward, but deploy to production. First-order optimal strategies
                             build on a culture of contribution and inclusion so those options
                         </p>
                         <h5 class="fw-700 text-uppercase text-current font18 mt-4">Qədirov Zeynalabdin</h5>
                         <span class="text-current-50 font16">Front-End Developer</span>
                         <span class="d-flex flex-row align-items-center">
                             <span class="text-current fw-700 font130 me-4">2</span>
-                            <span class="text-current fw-600 font20 text-uppercase w200">illik front-end təcrübəsi</span>
+                            <span class="text-current fw-600 font20 text-uppercase w200">illik front-end
+                                təcrübəsi</span>
                         </span>
                     </div>
                     <div class="col-md-7 d-flex flex-column justify-content-center ">
