--- a/index.html
+++ b/index.html
@@ -185,10 +185,116 @@
                     <div class="col-md-7 d-flex flex-column justify-content-center ">
                         <div class="container-fluid">
                             <div class="row">
-                                <div class="image-box">
+                                <div class="image-box bg-current-low">
                                     <img src="./assets/img/about.jpg" class="w-100 h-100" alt="">
                                 </div>
                             </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+        <section id="portfolio" class="py-4 px-2 px-md-5 bg-current">
+            <div class="container-fluid">
+                <div class="row py-5">
+                    <div class="col-12">
+                        <h2 class="mb-4 fw-700 font40 text-current">Portfolio</h2>
+                        <div class="swiper portfolio pb-5">
+                            <div class="swiper-wrapper">
+                                <div class="swiper-slide position-relative">
+                                    <img src="./assets/img/slide1.jpg" alt="">
+                                    <span class="position-absolute text-current text-uppercase fw-700">Biker
+                                        Store</span>
+                                </div>
+                                <div class="swiper-slide position-relative">
+                                    <img src="./assets/img/slide2.jpg" alt="">
+                                    <span
+                                        class="position-absolute text-current text-uppercase fw-700">Ticarətmərkəzi</span>
+                                </div>
+                                <div class="swiper-slide position-relative">
+                                    <img src="./assets/img/slide5.jpg" alt="">
+                                    <span class="position-absolute text-current text-uppercase fw-700">Rauf
+                                        Sadiqov</span>
+                                </div>
+                                <div class="swiper-slide position-relative">
+                                    <img src="./assets/img/slide3.jpg" alt="">
+                                    <span class="position-absolute text-current text-uppercase fw-700">Direkt
+                                        Kurse</span>
+                                </div>
+                                <div class="swiper-slide position-relative">
+                                    <img src="./assets/img/about.jpg" alt="">
+                                    <span class="position-absolute text-current text-uppercase fw-700">Lumusoft</span>
+                                </div>
+
+                            </div>
+                            <div class="swiper-pagination"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+        <section id="feedback" class="py-4 px-2 px-md-5 bg-current">
+            <div class="container-fluid">
+                <div class="row py-3 bg-current-low">
+                    <div class="col-md-5">
+                        <h2 class="mb-4 fw-700 font35 text-current">Müştərilərimizin geri dönüşləri</h2>
+                    </div>
+                    <div class="col-md-7">
+                        <div class="swiper feedback">
+                            <div class="swiper-wrapper">
+
+                                <div class="swiper-slide position-relative d-flex flex-column align-items-start ">
+                                    <span class="feedback-messages text-current-50 fw-400 mb-3 text-start fst-italic">
+                                        "The Brief team has been sincerely committed to designing great communication
+                                        around our projects. Our customers love their creative work - and so do we!"
+                                    </span>
+                                    <div class="feedback-author d-flex flex-row align-items-center">
+                                        <img src="./assets/img/lumusoft.png" class="me-3" alt="">
+                                        <span class="text-current fw-500">Lumusoft, WEB AGENCY</span>
+                                    </div>
+                                </div>
+
+                                <div class="swiper-slide position-relative d-flex flex-column align-items-start ">
+                                    <span class="feedback-messages text-current-50 fw-400 mb-3 text-start fst-italic">
+                                        "Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit error facere
+                                        dignissimos odio laborum temporibus autem consequatur fuga libero sed! "
+                                    </span>
+                                    <div class="feedback-author d-flex flex-row align-items-center">
+                                        <img src="./assets/img/neyman.jpg" class="me-3" alt="">
+                                        <span class="text-current fw-500">Neyman Technology</span>
+                                    </div>
+                                </div>
+
+
+                                <div class="swiper-slide position-relative d-flex flex-column align-items-start ">
+                                    <span class="feedback-messages text-current-50 fw-400 mb-3 text-start fst-italic">
+                                        "The Brief team has been sincerely committed to designing great communication
+                                        around our projects. Our customers love their creative work - and so do we!"
+                                    </span>
+                                    <div class="feedback-author d-flex flex-row align-items-center">
+                                        <img src="./assets/img/lumusoft.png" class="me-3" alt="">
+                                        <span class="text-current fw-500">Lumusoft, WEB AGENCY</span>
+                                    </div>
+                                </div>
+
+                                <div class="swiper-slide position-relative d-flex flex-column align-items-start ">
+                                    <span class="feedback-messages text-current-50 fw-400 mb-3 text-start fst-italic">
+                                        "The Brief team has been sincerely committed to designing great communication
+                                        around our projects. Our customers love their creative work - and so do we!"
+                                    </span>
+                                    <div class="feedback-author d-flex flex-row align-items-center">
+                                        <img src="./assets/img/lumusoft.png" class="me-3" alt="">
+                                        <span class="text-current fw-500">Lumusoft, WEB AGENCY</span>
+                                    </div>
+                                </div>
+
+
+                            </div>
+                            <div class="swiper-pagination"></div>
                         </div>
                     </div>
                 </div>
