--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
     <!-- page preloader -->
-    <div class="preloader">
+    <!-- <div class="preloader">
         <div class="top bg-current">
             <span class="preloader-title text-current">Zeynalabdeen</span>
         </div>
@@ -26,12 +26,12 @@
         <div class="bottom bg-current">
             <span class="preloader-title text-current">Yüklənir...</span>
         </div>
-    </div>
+    </div> -->
     <!-- page preloader -->
 
 
 
-    <nav>
+    <nav id="navbar">
         <div class="nav-wrapper px-3 px-md-5">
             <div class="logo text-current-50 font18 text-uppercase fw-700">Zeynalabdeen</div>
             <div class="menu-toggle">
@@ -301,6 +301,71 @@
             </div>
         </section>
 
+
+        <section id="blog" class="py-4 px-2 px-md-5 bg-current">
+            <div class="container-fluid">
+                <div class="row py-3">
+                    <h2 class="mb-4 fw-700 font35 text-current">Blog</h2>
+                    <div class="col-12">
+                        <div class="swiper blog">
+                            <div class="swiper-wrapper">
+
+                                <div class="swiper-slide position-relative">
+                                    <img src="./assets/img/blog1.jpg" class="w-100 h-100" alt="">
+                                    <span class="blog-info bg-current-low">
+                                        <span class="blog-category text-current-50 font14 ls-1">React Framework</span>
+                                        <h2 class="blog-title text-current font24 ls-1 fw-600">React State'in idarə olunması</h2>
+                                        <p class="blog-informative text-current-50 font16 lh-1 ls-1">
+                                            React'da ilk olaraq functional componentlərdən istifadə edəcəyik.
+                                            Functional componentlərdə useState() hook'unun köməyi ilə component içi state'i idarə etmək üçün kiçik nümunələr işləyəcəyik.
+                                        </p>
+                                    </span>
+                                </div>
+
+                                <div class="swiper-slide position-relative">
+                                    <img src="./assets/img/about.jpg" class="w-100 h-100" alt="">
+                                    <span class="blog-info bg-current-low">
+                                        <span class="blog-category text-current-50 font14 ls-1">React Framework</span>
+                                        <h2 class="blog-title text-current font24 ls-1 fw-600">React State'in idarə olunması</h2>
+                                        <p class="blog-informative text-current-50 font16 lh-1 ls-1">
+                                            React'da ilk olaraq functional componentlərdən istifadə edəcəyik.
+                                            Functional componentlərdə useState() hook'unun köməyi ilə component içi state'i idarə etmək üçün kiçik nümunələr işləyəcəyik.
+                                        </p>
+                                    </span>
+                                </div>
+                                <div class="swiper-slide position-relative">
+                                    <img src="./assets/img/slide5.jpg" class="w-100 h-100" alt="">
+                                    <span class="blog-info bg-current-low">
+                                        <span class="blog-category text-current-50 font14 ls-1">React Framework</span>
+                                        <h2 class="blog-title text-current font24 ls-1 fw-600">React State'in idarə olunması</h2>
+                                        <p class="blog-informative text-current-50 font16 lh-1 ls-1">
+                                            React'da ilk olaraq functional componentlərdən istifadə edəcəyik.
+                                            Functional componentlərdə useState() hook'unun köməyi ilə component içi state'i idarə etmək üçün kiçik nümunələr işləyəcəyik.
+                                        </p>
+                                    </span>
+                                </div>
+                                <div class="swiper-slide position-relative">
+                                    <img src="./assets/img/slide2.jpg" class="w-100 h-100" alt="">
+                                    <span class="blog-info bg-current-low">
+                                        <span class="blog-category text-current-50 font14 ls-1">React Framework</span>
+                                        <h2 class="blog-title text-current font24 ls-1 fw-600">React State'in idarə olunması</h2>
+                                        <p class="blog-informative text-current-50 font16 lh-1 ls-1">
+                                            React'da ilk olaraq functional componentlərdən istifadə edəcəyik.
+                                            Functional componentlərdə useState() hook'unun köməyi ilə component içi state'i idarə etmək üçün kiçik nümunələr işləyəcəyik.
+                                        </p>
+                                    </span>
+                                </div>
+
+                                
+
+
+                            </div>
+                            <div class="swiper-pagination"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
 
 
