--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
     <!-- page preloader -->
-    <!-- <div class="preloader">
+    <div class="preloader">
         <div class="top bg-current">
             <span class="preloader-title text-current">Zeynalabdeen</span>
         </div>
@@ -26,7 +26,7 @@
         <div class="bottom bg-current">
             <span class="preloader-title text-current">Yüklənir...</span>
         </div>
-    </div> -->
+    </div>
     <!-- page preloader -->
 
 
@@ -50,12 +50,12 @@
                             <ul class="p-0 d-inline-flex">
                                 <li class="text-current font35 my-1">
                                     <a>
-                                        <span class="font14 d-none d-md-inline-flex">01.</span>Home
+                                        <span class="font14 d-none d-md-inline-flex">01.</span>Ana Səhifə
                                     </a>
                                 </li>
                                 <li class="text-current font35 my-1">
                                     <a>
-                                        <span class="font14 d-none d-md-inline-flex">02.</span>About
+                                        <span class="font14 d-none d-md-inline-flex">02.</span>Haqqımda
                                     </a>
                                 </li>
                                 <li class="text-current font35 my-1">
@@ -65,17 +65,12 @@
                                 </li>
                                 <li class="text-current font35 my-1">
                                     <a>
-                                        <span class="font14 d-none d-md-inline-flex">04.</span>Works
+                                        <span class="font14 d-none d-md-inline-flex">04.</span>Blog
                                     </a>
                                 </li>
                                 <li class="text-current font35 my-1">
                                     <a>
-                                        <span class="font14 d-none d-md-inline-flex">05.</span>Blog
-                                    </a>
-                                </li>
-                                <li class="text-current font35 my-1">
-                                    <a>
-                                        <span class="font14 d-none d-md-inline-flex">06.</span>Contact
+                                        <span class="font14 d-none d-md-inline-flex">05.</span>Əlaqə
                                     </a>
                                 </li>
                             </ul>
@@ -314,10 +309,12 @@
                                     <img src="./assets/img/blog1.jpg" class="w-100 h-100" alt="">
                                     <span class="blog-info bg-current-low">
                                         <span class="blog-category text-current-50 font14 ls-1">React Framework</span>
-                                        <h2 class="blog-title text-current font24 ls-1 fw-600">React State'in idarə olunması</h2>
+                                        <h2 class="blog-title text-current font24 ls-1 fw-600">React State'in idarə
+                                            olunması</h2>
                                         <p class="blog-informative text-current-50 font16 lh-1 ls-1">
                                             React'da ilk olaraq functional componentlərdən istifadə edəcəyik.
-                                            Functional componentlərdə useState() hook'unun köməyi ilə component içi state'i idarə etmək üçün kiçik nümunələr işləyəcəyik.
+                                            Functional componentlərdə useState() hook'unun köməyi ilə component içi
+                                            state'i idarə etmək üçün kiçik nümunələr işləyəcəyik.
                                         </p>
                                     </span>
                                 </div>
@@ -326,10 +323,12 @@
                                     <img src="./assets/img/about.jpg" class="w-100 h-100" alt="">
                                     <span class="blog-info bg-current-low">
                                         <span class="blog-category text-current-50 font14 ls-1">React Framework</span>
-                                        <h2 class="blog-title text-current font24 ls-1 fw-600">React State'in idarə olunması</h2>
+                                        <h2 class="blog-title text-current font24 ls-1 fw-600">React State'in idarə
+                                            olunması</h2>
                                         <p class="blog-informative text-current-50 font16 lh-1 ls-1">
                                             React'da ilk olaraq functional componentlərdən istifadə edəcəyik.
-                                            Functional componentlərdə useState() hook'unun köməyi ilə component içi state'i idarə etmək üçün kiçik nümunələr işləyəcəyik.
+                                            Functional componentlərdə useState() hook'unun köməyi ilə component içi
+                                            state'i idarə etmək üçün kiçik nümunələr işləyəcəyik.
                                         </p>
                                     </span>
                                 </div>
@@ -337,10 +336,12 @@
                                     <img src="./assets/img/slide5.jpg" class="w-100 h-100" alt="">
                                     <span class="blog-info bg-current-low">
                                         <span class="blog-category text-current-50 font14 ls-1">React Framework</span>
-                                        <h2 class="blog-title text-current font24 ls-1 fw-600">React State'in idarə olunması</h2>
+                                        <h2 class="blog-title text-current font24 ls-1 fw-600">React State'in idarə
+                                            olunması</h2>
                                         <p class="blog-informative text-current-50 font16 lh-1 ls-1">
                                             React'da ilk olaraq functional componentlərdən istifadə edəcəyik.
-                                            Functional componentlərdə useState() hook'unun köməyi ilə component içi state'i idarə etmək üçün kiçik nümunələr işləyəcəyik.
+                                            Functional componentlərdə useState() hook'unun köməyi ilə component içi
+                                            state'i idarə etmək üçün kiçik nümunələr işləyəcəyik.
                                         </p>
                                     </span>
                                 </div>
@@ -348,15 +349,17 @@
                                     <img src="./assets/img/slide2.jpg" class="w-100 h-100" alt="">
                                     <span class="blog-info bg-current-low">
                                         <span class="blog-category text-current-50 font14 ls-1">React Framework</span>
-                                        <h2 class="blog-title text-current font24 ls-1 fw-600">React State'in idarə olunması</h2>
+                                        <h2 class="blog-title text-current font24 ls-1 fw-600">React State'in idarə
+                                            olunması</h2>
                                         <p class="blog-informative text-current-50 font16 lh-1 ls-1">
                                             React'da ilk olaraq functional componentlərdən istifadə edəcəyik.
-                                            Functional componentlərdə useState() hook'unun köməyi ilə component içi state'i idarə etmək üçün kiçik nümunələr işləyəcəyik.
+                                            Functional componentlərdə useState() hook'unun köməyi ilə component içi
+                                            state'i idarə etmək üçün kiçik nümunələr işləyəcəyik.
                                         </p>
                                     </span>
                                 </div>
 
-                                
+
 
 
                             </div>
@@ -367,6 +370,92 @@
             </div>
         </section>
 
+
+        <footer class="bg-current-low px-2 px-md-5 pt-5">
+            <div class="container-fluid pt-4">
+                <div class="row">
+                    <div class="col-12 col-md-6 col-lg-3">
+                        <h2 class="text-current fw-800 ls-1 font24 mb-4">Zeynalabdeen</h2>
+                        <span class="social d-flex flex-row justify-content-between">
+                            <a href="https://www.facebook.com/zeynal.qedirov.1/" target="_blank"
+                                class="border rounded-circle font12"><i
+                                    class="fa-brands fa-facebook-f text-current p-1"></i></a>
+                            <a href="https://github.com/Zeyoni" target="_blank" class="border rounded-circle font12"><i
+                                    class="fa-brands fa-github text-current p-1"></i></a>
+                            <a href="https://www.linkedin.com/in/zeyoni/" target="_blank"
+                                class="border rounded-circle font12"><i
+                                    class="fa-brands fa-linkedin-in text-current  p-1"></i></a>
+                        </span>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-3">
+                        <h2 class="text-current fw-600 text-uppercase ls-1 font16 mb-3 pt-1">Naviqasiya</h2>
+                        <ul class="p-0 d-inline-flex flex-column list-unstyled">
+                            <li class="text-current font10 my-1 ls-4 text-uppercase text-current-50">
+                                <a href="#home" class="text-current text-decoration-none">
+                                    Ana Səhifə
+                                </a>
+                            </li>
+                            <li class="text-current font10 my-1 ls-4 text-uppercase text-current-50">
+                                <a href="#about" class="text-current text-decoration-none">
+                                    Haqqımda
+                                </a>
+                            </li>
+                            <li class="text-current font10 my-1 ls-4 text-uppercase text-current-50">
+                                <a href="#portfolio" class="text-current text-decoration-none"> 
+                                    Portfolio
+                                </a>
+                            </li>
+                            <li class="text-current font10 my-1 ls-4 text-uppercase text-current-50">
+                                <a href="#blog" class="text-current text-decoration-none">
+                                    Blog
+                                </a>
+                            </li>
+                            <li class="text-current font10 my-1 ls-4 text-uppercase text-current-50">
+                                <a href="./contact.html" target="_blank" class="text-current text-decoration-none">
+                                    Əlaqə
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-3">
+                        <h2 class="text-current fw-600 text-uppercase ls-1 font16 mb-3 pt-1">Əlaqə</h2>
+                        <ul class="p-0 d-inline-flex flex-column list-unstyled">
+                            <li class="text-current font10 my-1 ls-4 text-uppercase text-current-50">
+                                <span class="text-current">
+                                    E:
+                                </span>
+                                <a href="mailto:zeeynalabdin@gmail.com" class="text-current text-decoration-none">
+                                    zeeynalabdin@gmail.com
+                                </a>
+                            </li>
+
+                            <li class="text-current font10 my-1 ls-4 text-uppercase text-current-50">
+                                <span class="text-current">
+                                    T:
+                                </span>
+                                <a href="mailto:zeeynalabdin@gmail.com" class="text-current text-decoration-none">
+                                    +994 99 342 02 12
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-3">
+                        <h2 class="text-current fw-600 text-uppercase ls-1 font16 mb-3 pt-1">Adres</h2>
+                        <ul class="p-0 d-inline-flex flex-column list-unstyled">
+                            <li class="text-current font10 my-1 ls-4 text-uppercase text-current">
+                                <span>
+                                    Azərbaycan, Bakı şəh., Səbail rayonu.
+                                </span>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <hr>
+                <div class="row py-1">
+                    <p class="font10 text-center w-100 fw-600 text-current-low text-uppercase">zeynalabdeen</p>
+                </div>
+            </div>
+        </footer>
 
 
 
