--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
         <footer class="bg-current-low px-2 px-md-5 pt-5">
             <div class="container-fluid pt-4">
                 <div class="row">
-                    <div class="col-12 col-md-6 col-lg-3">
+                    <div class="col-12 col-md-6 col-lg-3 mb-3">
                         <h2 class="text-current fw-800 ls-1 font24 mb-4">Zeynalabdeen</h2>
                         <span class="social d-flex flex-row justify-content-between">
                             <a href="https://www.facebook.com/zeynal.qedirov.1/" target="_blank"
@@ -387,7 +387,7 @@
                                     class="fa-brands fa-linkedin-in text-current  p-1"></i></a>
                         </span>
                     </div>
-                    <div class="col-12 col-md-6 col-lg-3">
+                    <div class="col-12 col-md-6 col-lg-3 mb-2">
                         <h2 class="text-current fw-600 text-uppercase ls-1 font16 mb-3 pt-1">Naviqasiya</h2>
                         <ul class="p-0 d-inline-flex flex-column list-unstyled">
                             <li class="text-current font10 my-1 ls-4 text-uppercase text-current-50">
@@ -417,7 +417,7 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="col-12 col-md-6 col-lg-3">
+                    <div class="col-12 col-md-6 col-lg-3 mb-2">
                         <h2 class="text-current fw-600 text-uppercase ls-1 font16 mb-3 pt-1">Əlaqə</h2>
                         <ul class="p-0 d-inline-flex flex-column list-unstyled">
                             <li class="text-current font10 my-1 ls-4 text-uppercase text-current-50">
@@ -439,7 +439,7 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="col-12 col-md-6 col-lg-3">
+                    <div class="col-12 col-md-6 col-lg-3 mb-2">
                         <h2 class="text-current fw-600 text-uppercase ls-1 font16 mb-3 pt-1">Adres</h2>
                         <ul class="p-0 d-inline-flex flex-column list-unstyled">
                             <li class="text-current font10 my-1 ls-4 text-uppercase text-current">
