--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
     <!-- page preloader -->
-    <div class="preloader">
+    <!-- <div class="preloader">
         <div class="top bg-current">
             <span class="preloader-title text-current">Zeynalabdeen</span>
         </div>
@@ -26,15 +26,17 @@
         <div class="bottom bg-current">
             <span class="preloader-title text-current">Yüklənir...</span>
         </div>
-    </div>
+    </div> -->
     <!-- page preloader -->
-
+    <div class="theme">
+        <i class="fa-solid fa-sun font18"></i>
+    </div>
 
 
     <nav id="navbar">
         <div class="nav-wrapper px-3 px-md-5">
             <div class="logo text-current-50 font18 text-uppercase fw-700">Zeynalabdeen</div>
-            <div class="menu-toggle">
+            <div class="menu-toggle text-current">
                 <div class="menu-icon me-2">
                     <span></span>
                     <span></span>
@@ -107,7 +109,7 @@
         <section id="home">
             <div class="slide-titles d-flex flex-column">
                 <span class="head-title font60 fw-700">Front End Developer</span>
-                <span class="description-title text-current-50 mt-2 current-text fw-600 ls-1">
+                <span class="description-title mt-2 current-text fw-600 ls-1">
                     Sometimes, we need to check the time, wondering when our work or meeting will finish, without
                     getting caught by others.
                 </span>
@@ -249,7 +251,7 @@
                                     </span>
                                     <div class="feedback-author d-flex flex-row align-items-center">
                                         <img src="./assets/img/lumusoft.png" class="me-3" alt="">
-                                        <span class="text-current fw-500">Lumusoft, WEB AGENCY</span>
+                                        <span class="fw-500">Lumusoft, WEB AGENCY</span>
                                     </div>
                                 </div>
 
@@ -260,7 +262,7 @@
                                     </span>
                                     <div class="feedback-author d-flex flex-row align-items-center">
                                         <img src="./assets/img/neyman.jpg" class="me-3" alt="">
-                                        <span class="text-current fw-500">Neyman Technology</span>
+                                        <span class="fw-500">Neyman Technology</span>
                                     </div>
                                 </div>
 
@@ -272,7 +274,7 @@
                                     </span>
                                     <div class="feedback-author d-flex flex-row align-items-center">
                                         <img src="./assets/img/lumusoft.png" class="me-3" alt="">
-                                        <span class="text-current fw-500">Lumusoft, WEB AGENCY</span>
+                                        <span class="fw-500">Lumusoft, WEB AGENCY</span>
                                     </div>
                                 </div>
 
@@ -283,7 +285,7 @@
                                     </span>
                                     <div class="feedback-author d-flex flex-row align-items-center">
                                         <img src="./assets/img/lumusoft.png" class="me-3" alt="">
-                                        <span class="text-current fw-500">Lumusoft, WEB AGENCY</span>
+                                        <span class="fw-500">Lumusoft, WEB AGENCY</span>
                                     </div>
                                 </div>
 
