--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
     <!-- page preloader -->
-    <!-- <div class="preloader">
+    <div class="preloader">
         <div class="top bg-current">
             <span class="preloader-title text-current">Zeynalabdeen</span>
         </div>
@@ -26,7 +26,7 @@
         <div class="bottom bg-current">
             <span class="preloader-title text-current">Yüklənir...</span>
         </div>
-    </div> -->
+    </div>
     <!-- page preloader -->
     <div class="theme">
         <i class="fa-solid fa-sun font18"></i>
@@ -403,7 +403,7 @@
                                 </a>
                             </li>
                             <li class="text-current font10 my-1 ls-4 text-uppercase text-current-50">
-                                <a href="#portfolio" class="text-current text-decoration-none"> 
+                                <a href="#portfolio" class="text-current text-decoration-none">
                                     Portfolio
                                 </a>
                             </li>
